--- a/src/components/Header/index.module.scss
+++ b/src/components/Header/index.module.scss
@@ -4,16 +4,25 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding-top: 20px;
+  padding-top: 30px;
   font-family: 'Nunito', sans-serif;
+  &Logo {
+    font-family: 'Yatra One', cursive;
+    color: inherit;
+    text-decoration: none;
+    font-size: 2rem;
+  }
   &Menu {
     display: flex;
+
     &Item {
-      margin-left: 55px;
       cursor: pointer;
       &:hover {
         color: #80471c;
       }
+    }
+    &Item + &Item {
+      margin-left: 55px;
     }
   }
   &Info {
@@ -21,8 +30,25 @@
     align-items: center;
     column-gap: 10px;
 
+    &Cart {
+      position: relative;
+      cursor: pointer;
+      &Count {
+        position: absolute;
+        background-color: #952323;
+        right: -2px;
+        top: 10px;
+        color: #fff;
+        font-size: 12px;
+        border-radius: 10px;
+        padding: 1px 3px;
+      }
+    }
     svg {
       cursor: pointer;
+      &:hover {
+        stroke: #f3f3f3;
+      }
     }
   }
 }
