--- a/src/components/Header/index.module.scss
+++ b/src/components/Header/index.module.scss
@@ -4,21 +4,36 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding-top: 30px;
+  padding: 30px 0;
   font-family: 'Nunito', sans-serif;
   &Logo {
-    font-family: 'Yatra One', cursive;
     color: inherit;
     text-decoration: none;
     font-size: 2rem;
+    font-family: 'Gugi', cursive;
   }
   &Menu {
     display: flex;
 
     &Item {
       cursor: pointer;
+      position: relative;
+      padding: 0 5px;
+      &::after {
+        content: '';
+        position: absolute;
+        width: 0%;
+        height: 3px;
+        left: 0;
+        bottom: -10px;
+        background-color: #80471c;
+        transition: all 0.5s;
+      }
       &:hover {
         color: #80471c;
+        &::after {
+          width: 100%;
+        }
       }
     }
     &Item + &Item {
