--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,14 @@
 .container {
-  max-width: 1000px;
+  max-width: 1220px;
   margin: 0 auto;
+  padding: 0 10px;
   min-height: 100%;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
 }
 
 html,
