--- a/src/assets/fonts/index.scss
+++ b/src/assets/fonts/index.scss
@@ -1,3 +1,4 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Gugi&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Gugi&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Mulish&display=swap');
