--- a/src/components/Header/index.module.scss
+++ b/src/components/Header/index.module.scss
@@ -1,68 +1,81 @@
 @import url('../../assets/fonts/index.scss');
 
-.root {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 30px 0;
-  font-family: 'Nunito', sans-serif;
-  &Logo {
-    color: inherit;
-    text-decoration: none;
-    font-size: 2rem;
-    font-family: 'Gugi', cursive;
-  }
-  &Menu {
-    display: flex;
+.container {
+  max-width: 1220px;
+  margin: 0 auto;
+  padding: 0 10px;
+  min-height: 100%;
+}
 
-    &Item {
-      cursor: pointer;
-      position: relative;
-      padding: 0 5px;
-      &::after {
-        content: '';
-        position: absolute;
-        width: 0%;
-        height: 3px;
-        left: 0;
-        bottom: -10px;
-        background-color: #80471c;
-        transition: all 0.5s;
-      }
-      &:hover {
-        color: #80471c;
+.root {
+  background-color: #f5f5f5;
+  box-shadow: 1px 1px 10px #adadad;
+  position: fixed;
+  z-index: 1000;
+  width: 100%;
+  &Inner {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 30px 0;
+    font-family: 'Nunito', sans-serif;
+    &Logo {
+      color: inherit;
+      text-decoration: none;
+      font-size: 2rem;
+      font-family: 'Gugi', cursive;
+    }
+    &Menu {
+      display: flex;
+      &Item {
+        cursor: pointer;
+        position: relative;
+        padding: 0 5px;
         &::after {
-          width: 100%;
+          content: '';
+          position: absolute;
+          width: 0%;
+          height: 3px;
+          left: 0;
+          bottom: -10px;
+          background-color: #80471c;
+          transition: all 0.5s;
+        }
+        &:hover {
+          color: #80471c;
+          &::after {
+            width: 100%;
+          }
         }
       }
-    }
-    &Item + &Item {
-      margin-left: 55px;
-    }
-  }
-  &Info {
-    display: flex;
-    align-items: center;
-    column-gap: 10px;
-
-    &Cart {
-      position: relative;
-      cursor: pointer;
-      &Count {
-        position: absolute;
-        background-color: #952323;
-        right: -2px;
-        top: 10px;
-        color: #fff;
-        font-size: 12px;
-        border-radius: 10px;
-        padding: 1px 3px;
+      &Item + &Item {
+        margin-left: 55px;
       }
     }
-    svg {
-      cursor: pointer;
-      &:hover {
-        stroke: #f3f3f3;
+    &Info {
+      display: flex;
+      align-items: center;
+      column-gap: 10px;
+
+      &Cart {
+        position: relative;
+        cursor: pointer;
+        &Count {
+          position: absolute;
+          background-color: #952323;
+          right: -2px;
+          top: 10px;
+          color: #fff;
+          font-size: 12px;
+          border-radius: 10px;
+          padding: 1px 3px;
+        }
+      }
+      svg {
+        cursor: pointer;
+        &:hover {
+          stroke: #f3f3f3;
+        }
       }
     }
   }
