--- a/src/components/Header/index.module.scss
+++ b/src/components/Header/index.module.scss
@@ -10,9 +10,9 @@
 .root {
   background-color: #f5f5f5;
   box-shadow: 1px 1px 10px #adadad;
-  position: fixed;
-  z-index: 1000;
-  width: 100%;
+  // position: fixed;
+  // z-index: 1000;
+  // width: 100%;
   &Inner {
     display: flex;
     justify-content: space-between;
