--- a/src/components/Catalog/index.module.scss
+++ b/src/components/Catalog/index.module.scss
@@ -12,12 +12,13 @@
   padding-bottom: 100px;
   &CatalogList {
     display: grid;
+    column-gap: 25px;
     grid-template-columns: repeat(4, 1fr);
     row-gap: 50px;
     place-items: center;
   }
   &Title {
-    margin: 0 0 30px 12px;
+    margin: 0 0 30px 0;
     font-size: 30px;
     font-family: 'Nunito', sans-serif;
     text-transform: uppercase;
