--- a/src/components/Catalog/index.module.scss
+++ b/src/components/Catalog/index.module.scss
@@ -10,15 +10,22 @@
 .root {
   min-height: 100vh;
   padding-bottom: 100px;
-  &CatalogList {
-    display: grid;
-    column-gap: 25px;
-    grid-template-columns: repeat(4, 1fr);
-    row-gap: 50px;
-    place-items: center;
+  &Catalog {
+    &List {
+      display: grid;
+      column-gap: 25px;
+      grid-template-columns: repeat(4, 1fr);
+      row-gap: 50px;
+      place-items: center;
+    }
+    &Wrapper {
+      margin: 0 0 50px 0;
+      display: flex;
+      justify-content: space-between;
+    }
   }
+
   &Title {
-    margin: 0 0 30px 0;
     font-size: 30px;
     font-family: 'Nunito', sans-serif;
     text-transform: uppercase;
