--- a/src/components/Catalog/index.module.scss
+++ b/src/components/Catalog/index.module.scss
@@ -8,8 +8,8 @@
 }
 
 .root {
-  min-height: 100vh;
-  padding-bottom: 100px;
+  background-color: #fffbff;
+  padding: 100px 0;
   &Catalog {
     &List {
       display: grid;
