--- a/src/components/ItemBlock/index.module.scss
+++ b/src/components/ItemBlock/index.module.scss
@@ -11,7 +11,7 @@
   &Picture {
     box-shadow: 1px 3px 10px #d4d4d4;
     position: relative;
-    min-height: 300px;
+    height: 285px;
     &Btns {
       visibility: hidden;
       opacity: 0;
@@ -69,7 +69,7 @@
     }
   }
   &Img {
-    width: 275px;
+    width: 100%;
   }
   &Sizes {
     visibility: hidden;
