--- a/src/components/Catalog/index.module.scss
+++ b/src/components/Catalog/index.module.scss
@@ -9,7 +9,7 @@
 
 .root {
   background-color: #fffbff;
-  padding: 100px 0;
+  padding: 100px 0 75px 0;
   &Catalog {
     &List {
       display: grid;
