--- a/src/components/Header/index.module.scss
+++ b/src/components/Header/index.module.scss
@@ -56,7 +56,7 @@
       display: flex;
       align-items: center;
       column-gap: 10px;
-
+      margin-left: 50px;
       &Cart {
         position: relative;
         cursor: pointer;
