--- a/src/components/ItemBlock/index.module.scss
+++ b/src/components/ItemBlock/index.module.scss
@@ -29,21 +29,6 @@
           stroke: #000;
         }
       }
-      &Cart {
-        left: 50%;
-        top: 85%;
-        background-color: #000;
-        border: none;
-        padding: 5px 15px;
-        color: #f5f5f5;
-        border-radius: 20px;
-        transform: translate(-50%, -50%);
-        position: absolute;
-        &:hover {
-          background-color: #333333;
-          color: #f5f5f5;
-        }
-      }
     }
   }
 
@@ -92,12 +77,12 @@
     }
     &Btn {
       &Active {
-        background-color: #000;
+        background-color: #e50c7d;
         color: #fff;
       }
       &:hover {
-        color: #fff;
-        background-color: #000;
+        color: #e50c7d;
+        background-color: #fff;
       }
     }
   }
