--- a/src/pages/Favorites/index.module.scss
+++ b/src/pages/Favorites/index.module.scss
@@ -1,10 +1,20 @@
+@import url('../../assets/fonts/index.scss');
 .root {
   font-size: 26px;
   padding-top: 200px;
+  &Title {
+    font-size: 30px;
+    font-family: 'Nunito';
+  }
+  &Inner {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 50px;
+  }
 }
 
-.container {
-  max-width: 1220px;
+.wrapper {
+  max-width: 1020px;
   margin: 0 auto;
   padding: 0 10px;
   min-height: 100%;
