--- a/src/components/FavItemBlock/index.module.scss
+++ b/src/components/FavItemBlock/index.module.scss
@@ -1,6 +1,26 @@
 .root {
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  font-family: 'Nunito';
+  align-items: center;
+  row-gap: 10px;
   &Img {
     width: 250px;
+  }
+  &Title {
+    font-size: 20px;
+  }
+  &Price {
+    font-size: 16px;
+  }
+  &Btn {
+    border: none;
+    background-color: transparent;
+    padding: 10px 20px;
+    border-radius: 10px;
+    cursor: pointer;
+    background-color: rgb(255, 207, 249);
+    color: #000;
   }
 }
