--- a/src/components/ItemBlock/index.module.scss
+++ b/src/components/ItemBlock/index.module.scss
@@ -14,6 +14,8 @@
     height: 285px;
     &Btns {
       transition: all 0.3s;
+      position: relative;
+      z-index: 10000;
       button {
         cursor: pointer;
       }
@@ -59,6 +61,14 @@
       font-size: 22px;
       line-height: 28px;
       margin: 14px 0;
+      &::before {
+        content: '';
+        position: absolute;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+      }
     }
     &Price {
       margin-bottom: 20px;
@@ -73,6 +83,8 @@
     transition: all 0.3s;
     display: flex;
     align-items: center;
+    position: relative;
+    z-index: 10000;
     margin-left: 5px;
     column-gap: 5px;
     width: 280px;
@@ -96,5 +108,9 @@
         background-color: rgb(221, 221, 221);
       }
     }
+  }
+  &Link {
+    text-decoration: none;
+    color: inherit;
   }
 }
