--- a/src/pages/FullItem/index.module.scss
+++ b/src/pages/FullItem/index.module.scss
@@ -2,6 +2,7 @@
 
 .root {
   padding-top: 200px;
+  gap: 25px;
   display: flex;
   justify-content: center;
   &ImgItem {
@@ -18,6 +19,11 @@
     font-size: 30px;
   }
   &Btn {
+    &Active {
+      @extend .rootBtn;
+      color: #000;
+      border-color: #000;
+    }
     font-family: 'Space Grotesk';
     border: 2px solid #8860ff;
     border-radius: 10px;
@@ -28,7 +34,7 @@
     padding: 7px 20px;
     cursor: pointer;
     &:hover {
-      border-color: #a2a2a2;
+      border-color: #3f3f3f;
     }
   }
   &Info {
@@ -42,7 +48,11 @@
     margin: 20px 5px;
     padding: 10px 30px;
     border-radius: 10px;
+    cursor: pointer;
     color: #fff;
+    &:hover {
+      background-color: #8c66fe;
+    }
   }
 }
 
