--- a/src/components/FavItemBlock/index.module.scss
+++ b/src/components/FavItemBlock/index.module.scss
@@ -1,7 +1,11 @@
+@import url('../../assets/fonts/index.scss');
+
 .root {
   text-align: center;
   display: flex;
+  position: relative;
   flex-direction: column;
+
   font-family: 'Nunito';
   align-items: center;
   row-gap: 10px;
@@ -10,6 +14,15 @@
   }
   &Title {
     font-size: 20px;
+
+    &::before {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+    }
   }
   &Price {
     font-size: 16px;
@@ -17,10 +30,17 @@
   &Btn {
     border: none;
     background-color: transparent;
-    padding: 10px 20px;
+    padding: 5px 15px;
+    font-family: 'Nunito';
     border-radius: 10px;
     cursor: pointer;
-    background-color: rgb(255, 207, 249);
-    color: #000;
+    background-color: #917dcd;
+    margin-top: 5px;
+    color: rgb(255, 255, 255);
   }
+}
+
+.Link {
+  text-decoration: none;
+  color: inherit;
 }
