--- a/src/pages/Favorites/index.module.scss
+++ b/src/pages/Favorites/index.module.scss
@@ -1,6 +1,7 @@
 @import url('../../assets/fonts/index.scss');
 .root {
   text-align: center;
+  font-family: 'Nunito';
   &Box {
     font-size: 16px;
     display: flex;
@@ -9,11 +10,12 @@
     justify-content: center;
   }
   padding-top: 200px;
-  font-family: 'Nunito';
+
   &Title {
     font-size: 30px;
   }
   &Inner {
+    margin-top: 25px;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 50px;
