--- a/src/pages/FullItem/index.module.scss
+++ b/src/pages/FullItem/index.module.scss
@@ -5,6 +5,20 @@
   gap: 25px;
   display: flex;
   justify-content: center;
+  &Link {
+    text-decoration: none;
+  }
+  &BackBtn {
+    display: block;
+    padding: 2px 10px;
+    margin-top: 10px;
+    cursor: pointer;
+    margin-left: 7px;
+    border: 2px solid #24222b;
+
+    color: #1b1923;
+    background-color: transparent;
+  }
   &ImgItem {
     width: 400px;
   }
