--- a/src/pages/Favorites/index.module.scss
+++ b/src/pages/Favorites/index.module.scss
@@ -2,6 +2,10 @@
 .root {
   text-align: center;
   font-family: 'Nunito';
+  &Img {
+    width: 600px;
+    border-radius: 10px;
+  }
   &Box {
     font-size: 16px;
     display: flex;
@@ -12,7 +16,20 @@
   padding-top: 200px;
 
   &Title {
+    font-size: 24px;
+  }
+  &Text {
+    margin: 10px 0;
+    font-size: 36px;
+  }
+  &BackBtn {
+    font-family: 'Nunito';
     font-size: 30px;
+    border: none;
+    padding: 2px 10px;
+    text-align: center;
+    cursor: pointer;
+    background-color: transparent;
   }
   &Inner {
     margin-top: 25px;
