--- a/src/pages/FullItem/index.module.scss
+++ b/src/pages/FullItem/index.module.scss
@@ -2,21 +2,25 @@
 
 .root {
   padding-top: 200px;
-  gap: 25px;
-  display: flex;
-  justify-content: center;
+  &Inner {
+    gap: 25px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+  }
   &Link {
     text-decoration: none;
   }
   &BackBtn {
+    font-family: 'Nunito';
+    border: none;
     display: block;
+    outline: none;
     padding: 2px 10px;
-    margin-top: 10px;
+    margin: 10px 0;
+    text-align: center;
     cursor: pointer;
-    margin-left: 7px;
-    border: 2px solid #24222b;
-
-    color: #1b1923;
     background-color: transparent;
   }
   &ImgItem {
@@ -53,6 +57,9 @@
   }
   &Info {
     max-width: 400px;
+    display: flex;
+    flex-direction: column;
+    align-items: baseline;
   }
   &Cart {
     background-color: #855cff;
