--- a/src/components/FavItemBlock/index.module.scss
+++ b/src/components/FavItemBlock/index.module.scss
@@ -1,14 +1,14 @@
 @import url('../../assets/fonts/index.scss');
 
 .root {
-  text-align: center;
-  display: flex;
   position: relative;
-  flex-direction: column;
-
+  padding: 10px 10px 20px 10px;
   font-family: 'Nunito';
-  align-items: center;
   row-gap: 10px;
+  &:hover {
+    box-shadow: 1px 3px 10px #9b9b9b;
+    border-radius: 10px;
+  }
   &Img {
     width: 250px;
   }
@@ -24,21 +24,35 @@
       left: 0;
     }
   }
-  &Price {
-    font-size: 16px;
-  }
-  &Btn {
-    position: relative;
-    z-index: 1000001;
-    border: none;
-    background-color: transparent;
-    padding: 5px 15px;
-    font-family: 'Nunito';
-    border-radius: 10px;
-    cursor: pointer;
-    background-color: #917dcd;
-    margin-top: 5px;
-    color: rgb(255, 255, 255);
+  &Text {
+    text-align: center;
+    display: flex;
+    height: 100px;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    &Price {
+      font-size: 16px;
+      margin: 10px 0;
+    }
+    &Btn {
+      font-weight: 700;
+      position: relative;
+      z-index: 1000001;
+      border: none;
+      background-color: transparent;
+      padding: 5px 12px;
+      font-family: 'Nunito';
+      border-radius: 10px;
+      cursor: pointer;
+      background-color: #ed0c0c94;
+      margin-top: 5px;
+      color: rgb(255, 255, 255);
+      transition: all 0.2s;
+      &:hover {
+        transform: scale(1.08);
+      }
+    }
   }
 }
 
