--- a/src/pages/Favorites/index.module.scss
+++ b/src/pages/Favorites/index.module.scss
@@ -2,6 +2,22 @@
 .root {
   text-align: center;
   font-family: 'Nunito';
+  padding: 50px 0 100px 0;
+  &ClearBtn {
+    border: 2px solid #000;
+    border-radius: 10px;
+    background-color: transparent;
+    margin-top: 50px;
+    cursor: pointer;
+    font-family: 'Nunito';
+    font-size: 15px;
+    transition: all 0.3s;
+    padding: 10px 25px;
+    &:hover {
+      border-color: #8860ff;
+      color: #8860ff;
+    }
+  }
   &Img {
     width: 600px;
     border-radius: 10px;
@@ -16,10 +32,11 @@
   padding-top: 200px;
 
   &Title {
-    font-size: 24px;
+    font-size: 30px;
   }
   &Text {
     margin: 10px 0;
+    height: 100px;
     font-size: 36px;
   }
   &BackBtn {
