--- a/src/components/ForHimAndHer/index.module.scss
+++ b/src/components/ForHimAndHer/index.module.scss
@@ -6,13 +6,13 @@
 .container {
   max-width: 1220px;
   margin: 0 auto;
-  padding: 0 10px;
+  padding: 170px 0 0 10px;
   min-height: 100%;
 }
 
 .root {
   display: flex;
-  padding-top: 170px;
+
   &Link {
     cursor: pointer;
   }
