--- a/src/pages/Favorites/index.module.scss
+++ b/src/pages/Favorites/index.module.scss
@@ -2,7 +2,7 @@
 .root {
   text-align: center;
   font-family: 'Nunito';
-  padding: 50px 0 100px 0;
+  padding-bottom: 100px;
   &ClearBtn {
     border: 2px solid #000;
     border-radius: 10px;
@@ -25,11 +25,11 @@
   &Box {
     font-size: 16px;
     display: flex;
+    padding: 50px 0 100px 0;
     align-items: center;
     flex-direction: column;
     justify-content: center;
   }
-  padding-top: 200px;
 
   &Title {
     font-size: 30px;
@@ -56,9 +56,9 @@
   }
 }
 
-.wrapper {
+.container {
   max-width: 1020px;
   margin: 0 auto;
-  padding: 0 10px;
+  padding: 200px 0 0 10px;
   min-height: 100%;
 }
