--- a/src/pages/PageNotFound/index.module.scss
+++ b/src/pages/PageNotFound/index.module.scss
@@ -9,13 +9,14 @@
     font-size: 60px;
   }
   &Btn {
-    cursor: pointer;
+    font-family: 'Nunito';
     font-size: 30px;
+    border: none;
+    padding: 2px 10px;
+    text-align: center;
+    cursor: pointer;
     background-color: transparent;
-    border: 1px solid #454545;
-    padding: 10px 20px;
     margin-top: 20px;
-    border-radius: 20px;
   }
 }
 .container {
