--- a/src/components/Header/index.module.scss
+++ b/src/components/Header/index.module.scss
@@ -40,11 +40,11 @@
           height: 3px;
           left: 0;
           bottom: -10px;
-          background-color: #ff269d;
+          background-color: #7a124a;
           transition: all 0.5s;
         }
         &:hover {
-          color: #ff269d;
+          color: #7a124a;
           &::after {
             width: 100%;
           }
