--- a/src/pages/About/index.module.scss
+++ b/src/pages/About/index.module.scss
@@ -1,8 +1,9 @@
 @import url('../../assets/fonts/index.scss');
 .root {
   height: 100vh;
+
   &About {
-    max-width: 850px;
+    max-width: 950px;
     text-align: center;
     &Title {
       font-size: 34px;
@@ -15,7 +16,7 @@
       color: #fff;
     }
     &Text {
-      font-size: 22px;
+      font-size: 24px;
       font-family: 'Exo 2', sans-serif;
       line-height: 27px;
       position: relative;
@@ -30,8 +31,9 @@
     }
     img {
       position: absolute;
-
+      z-index: -1000;
       left: 0;
+      bottom: 0;
       right: 0;
       object-fit: cover;
       filter: brightness(40%);
