--- a/src/components/ItemBlock/index.module.scss
+++ b/src/components/ItemBlock/index.module.scss
@@ -17,6 +17,12 @@
       transition: all 0.3s;
       position: relative;
       z-index: 10000;
+      svg {
+        transition: all 0.3s cubic-bezier(0.39, 0.575, 0.565, 1);
+        &:hover {
+          transform: scale(1.1);
+        }
+      }
       button {
         cursor: pointer;
       }
