--- a/src/components/CartItem/index.module.scss
+++ b/src/components/CartItem/index.module.scss
@@ -2,4 +2,17 @@
   img {
     width: 100px;
   }
+  &Btn {
+    border: none;
+    cursor: pointer;
+    background-color: transparent;
+    svg {
+      &:hover {
+        path {
+          transition: all 0.4s;
+          fill: #000;
+        }
+      }
+    }
+  }
 }
