--- a/src/components/CartEmpty/index.module.scss
+++ b/src/components/CartEmpty/index.module.scss
@@ -5,6 +5,7 @@
   justify-content: center;
   flex-direction: column;
   align-items: center;
+  padding-top: 200px;
   gap: 10px;
   h1 {
     font-size: 36px;
