--- a/src/components/ItemBlock/index.module.scss
+++ b/src/components/ItemBlock/index.module.scss
@@ -99,7 +99,7 @@
     button {
       padding: 5px 10px;
       border-radius: 20px;
-      transition: all 0.3s;
+
       font-size: 11px;
       border: 2px solid transparent;
       cursor: pointer;
@@ -108,6 +108,9 @@
       color: #240f0f;
       &:hover {
         border-color: #1c1c1c;
+      }
+      &:active {
+        transform: translateY(-2px);
       }
     }
   }
