--- a/src/components/Catalog/index.module.scss
+++ b/src/components/Catalog/index.module.scss
@@ -28,7 +28,7 @@
         grid-template-columns: repeat(2, 1fr);
       }
       @media (max-width: 682px) {
-        gap: 0;
+        row-gap: 50px;
       }
       @media (max-width: 425px) {
         grid-template-columns: repeat(1, 1fr);
@@ -38,6 +38,13 @@
       margin: 0 0 50px 0;
       display: flex;
       justify-content: space-between;
+      @media (max-width: 425px) {
+        flex-direction: column;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
+        row-gap: 10px;
+      }
     }
   }
 
