--- a/src/components/Header/index.module.scss
+++ b/src/components/Header/index.module.scss
@@ -63,6 +63,9 @@
       width: 30px;
       cursor: pointer;
       height: 25px;
+      @media (max-width: 426px) {
+        margin-right: 10px;
+      }
       &::before {
         content: '';
         position: absolute;
