--- a/src/components/CartEmpty/index.module.scss
+++ b/src/components/CartEmpty/index.module.scss
@@ -4,9 +4,13 @@
   display: flex;
   justify-content: center;
   flex-direction: column;
+  text-align: center;
   align-items: center;
   padding-top: 200px;
-  gap: 10px;
+  gap: 20px;
+  @media (max-width: 520px) {
+    padding: 200px 40px 0 40px;
+  }
   h1 {
     font-size: 36px;
   }
@@ -15,6 +19,10 @@
     margin-top: 5px;
   }
   img {
+    width: 250px;
+    @media (max-width: 520px) {
+      width: 50%;
+    }
   }
   button {
     margin-top: 50px;
@@ -25,5 +33,8 @@
     text-align: center;
     cursor: pointer;
     background-color: transparent;
+    @media (max-width: 520px) {
+      font-size: 18px;
+    }
   }
 }
