--- a/src/pages/About/index.module.scss
+++ b/src/pages/About/index.module.scss
@@ -21,10 +21,17 @@
       line-height: 27px;
       position: relative;
       z-index: 100;
-
       margin-bottom: 20px;
       font-weight: 400;
       color: #fff;
+      @media (max-width: 1028px) {
+        font-size: 20px;
+        padding: 20px;
+      }
+      @media (max-width: 600px) {
+        font-size: 16px;
+        padding: 12px;
+      }
       span {
         text-decoration: underline;
       }
