--- a/src/pages/Favorites/index.module.scss
+++ b/src/pages/Favorites/index.module.scss
@@ -20,6 +20,9 @@
   &Img {
     width: 600px;
     border-radius: 10px;
+    @media (max-width: 706px) {
+      width: 90%;
+    }
   }
   &Box {
     font-size: 16px;
@@ -37,6 +40,12 @@
     margin: 10px 0;
     height: 100px;
     font-size: 36px;
+    @media (max-width: 706px) {
+      font-size: 32px;
+    }
+    @media (max-width: 426px) {
+      font-size: 30px;
+    }
   }
   &BackBtn {
     font-family: 'Nunito';
@@ -46,18 +55,32 @@
     text-align: center;
     cursor: pointer;
     background-color: transparent;
+    @media (max-width: 706px) {
+      font-size: 22px;
+    }
+    @media (max-width: 426px) {
+      font-size: 17px;
+    }
   }
   &Inner {
     margin-top: 25px;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 50px;
+    @media (max-width: 1000px) {
+      grid-template-columns: repeat(2, 1fr);
+      padding: 20px;
+    }
+    @media (max-width: 600px) {
+      grid-template-columns: 300px;
+      place-content: center;
+    }
   }
 }
 
 .container {
   max-width: 1020px;
   margin: 0 auto;
-  padding: 200px 0 0 10px;
+  padding: 200px 0 100px 10px;
   min-height: 100%;
 }
