--- a/src/pages/FullItem/index.module.scss
+++ b/src/pages/FullItem/index.module.scss
@@ -2,6 +2,9 @@
 
 .root {
   padding-top: 200px;
+  @media (max-width: 426px) {
+    padding: 200px 20px 0 20px;
+  }
   &Inner {
     gap: 25px;
     display: flex;
@@ -25,6 +28,9 @@
   }
   &ImgItem {
     width: 400px;
+    @media (max-width: 426px) {
+      width: 250px;
+    }
   }
   &Title {
     font-family: 'Gugi';
