--- a/src/components/CartItem/index.module.scss
+++ b/src/components/CartItem/index.module.scss
@@ -6,14 +6,25 @@
   align-items: center;
   padding: 5px;
   border-bottom: 1px solid #c3c3c3;
+  @media (max-width: 780px) {
+    flex-direction: column;
+    text-align: center;
+    row-gap: 5px;
+    padding: 20px;
+  }
+  @media (max-width: 426px) {
+    padding: 40px;
+  }
   &Text {
     h1 {
       margin-bottom: 10px;
     }
+    @media (max-width: 780px) {
+      margin-bottom: 5px;
+    }
   }
   &Info {
     text-align: center;
-
     &Btns {
       margin-top: 10px;
       display: flex;
@@ -32,6 +43,13 @@
     font-size: 20px;
     width: 300px;
     margin-bottom: 5px;
+    @media (max-width: 780px) {
+      margin-bottom: 15px;
+    }
+    @media (max-width: 426px) {
+      font-size: 16px;
+      width: 180px;
+    }
   }
 
   button {
