--- a/src/pages/Cart/index.module.scss
+++ b/src/pages/Cart/index.module.scss
@@ -4,7 +4,6 @@
   &Cart {
     &Sum {
       font-size: 20px;
-
       font-family: 'Nunito';
     }
     &Main {
@@ -16,6 +15,10 @@
       align-items: center;
       margin-bottom: 30px;
       font-family: 'Nunito';
+      @media (max-width: 426px) {
+        flex-direction: column;
+        row-gap: 30px;
+      }
       h1 {
         font-size: 22px;
       }
@@ -31,6 +34,10 @@
       display: flex;
       align-items: center;
       justify-content: space-between;
+      @media (max-width: 780px) {
+        flex-direction: column;
+        row-gap: 30px;
+      }
       button {
         border: 2px solid #1f1f1f;
         background-color: #1f1f1f;
@@ -40,6 +47,10 @@
         transition: all 0.3s;
         font-size: 20px;
         padding: 17px 45px;
+        @media (max-width: 780px) {
+          padding: 10px 20px;
+          font-size: 16px;
+        }
         &:hover {
           background-color: #fff;
           color: #1f1f1f;
