--- a/src/pages/Contacts/index.module.scss
+++ b/src/pages/Contacts/index.module.scss
@@ -31,7 +31,7 @@
 }
 
 .container {
-  padding: 200px 0 0 10px;
+  padding: 200px 0 100px 10px;
   min-height: 100%;
   display: flex;
   justify-content: center;
