--- a/src/components/ForHimAndHer/index.module.scss
+++ b/src/components/ForHimAndHer/index.module.scss
@@ -6,7 +6,7 @@
 .container {
   max-width: 1220px;
   margin: 0 auto;
-  padding: 170px 0 0 10px;
+  padding: 170px 5px 0 5px;
   min-height: 100%;
 }
 
