--- a/src/components/Header/index.module.scss
+++ b/src/components/Header/index.module.scss
@@ -118,11 +118,11 @@
           height: 3px;
           left: 0;
           bottom: -10px;
-          background-color: #7a124a;
+          background-color: #220d62;
           transition: all 0.5s;
         }
         &:hover {
-          color: #7a124a;
+          color: #220d62;
           &::after {
             width: 100%;
           }
