--- a/src/index.css
+++ b/src/index.css
@@ -7,8 +7,20 @@ html {
   overflow-y: scroll;
 }
 
+::-webkit-scrollbar {
+  width: 8px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: none;
+}
+::-webkit-scrollbar-thumb {
+  background-color: #919191;
+  border-radius: 10px;
+}
+
 .active {
-  color: #7a124a;
+  color: #220d62;
 }
 
 html,
