--- a/src/pages/FullItem/index.module.scss
+++ b/src/pages/FullItem/index.module.scss
@@ -3,7 +3,7 @@
 .root {
   padding-top: 200px;
   @media (max-width: 426px) {
-    padding: 200px 20px 0 20px;
+    padding: 200px 20px 80px 20px;
   }
   &Inner {
     gap: 25px;
@@ -66,6 +66,7 @@
     display: flex;
     flex-direction: column;
     align-items: baseline;
+    flex-basis: 100%;
   }
   &Cart {
     background-color: #855cff;
