--- a/src/components/Catalog/index.module.scss
+++ b/src/components/Catalog/index.module.scss
@@ -60,3 +60,10 @@
     text-transform: uppercase;
   }
 }
+
+.error {
+  font-size: 22px;
+  text-align: center;
+  font-family: 'Nunito';
+  line-height: 30px;
+}
